major refac